--- a/package.json
+++ b/package.json
@@ -16,14 +16,20 @@
     "axios": "^1.6.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "config": "^1.31.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^7.1.1",
+    "morgan": "~1.8.1",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.0.1",
+    "qs": "^6.7.0",
+    "request": "^2.88.2",
+    "sha256": "^0.2.0",
     "typescript": "^5.0.4",
     "validator": "^13.9.0"
   },
